--- a/pages/homes.html
+++ b/pages/homes.html
@@ -415,8 +415,14 @@
             <div class="modal__header">
                 <h2 class="modal__title">Получить
 консультацию по свету</h2>
+                <h2 class="modal__title_mobile">Получить
+                    консультацию
+                    по свету</h2>
                 <p class="modal__subtitle">Мы с радостью обсудим ваши идеи и пожелания,
 дадим обратную связь в течение 2 часов.</p>
+                <p class="modal__subtitle_mobile">Мы с радостью обсудим ваши идеи
+                    и пожелания, дадим обратную
+                    связь в течение 2 часов.</p>
             </div>
             <form class="modal__form" id="consultForm">
                 <div class="modal__inputs">
@@ -428,7 +434,10 @@
                 </div>
                 <button type="submit" class="modal__submit">Отправить</button>
                 <p class="modal__privacy">Нажимая на кнопку «Отправить», вы соглашаетесь с условиями нашей политики конфиденциальности*</p>
-            </form>
+                <p class="modal__privacy_mobile">Нажимая на кнопку «Отправить»,
+                    вы соглашаетесь с условиями нашей
+                    политики конфиденциальности*</p>            
+                </form>
         </div>
 
         <!-- Success State -->
@@ -436,8 +445,18 @@
             <button class="modal__close" id="modalCloseSuccess">Закрыть</button>
             <div class="modal__success-content">
                 <div class="modal__moon"></div>
-                <h2 class="modal__success-title">Ваша заявка успешно отправлена!</h2>
-                <p class="modal__success-text">Мы уже получили ваше сообщение и скоро свяжемся — обычно это занимает не больше 2 часов. До скорой встречи!</p>
+                <h2 class="modal__success-title">Ваша заявка успешно
+                    отправлена!</h2>                
+                <h2 class="modal__success-title_mobile">Ваша заявка
+                    успешно
+                    отправлена!</h2>
+                <p class="modal__success-text">Мы уже получили ваше сообщение и скоро
+                    свяжемся — обычно это занимает не больше
+                    2 часов. До скорой встречи!</p>
+                <p class="modal__success-text_mobile">Мы уже получили ваше сообщение
+                    и скоро свяжемся — обычно это
+                    занимает не больше 2 часов.
+                    До скорой встречи!</p>
             </div>
         </div>
     </div>
