--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                     <h2 class="index-page__link-title">Светодизайн для жилых домов</h2>
                     <p class="index-page__link-description">Создание комфортного освещения для домов и квартир</p>
                 </a>
+                <a href="pages/retail.html" class="index-page__link">
+                    <h2 class="index-page__link-title">Светодизайн для ритейла</h2>
+                    <p class="index-page__link-description">Свет, который продает. Проекты освещения для магазинов и торговых пространств</p>
+                </a>
             </nav>
         </div>
     </div>
