--- a/pages/homes.html
+++ b/pages/homes.html
@@ -71,7 +71,12 @@
             <h2 class="knowhow__title_mobile">знаем как сделать 
 идеальное освещение
 в доме вашей мечты</h2>
-            <p class="knowhow__description">Мы создаем комфорт и экономим вашу электроэнергию благодаря точному расчету освещенности</p>
+            <p class="knowhow__description">Мы создаем комфорт и экономим вашу
+                электроэнергию благодаря точному
+                расчету освещенности</p>
+            <p class="knowhow__description_mobile">Мы создаем комфорт и экономим
+                вашу электроэнергию благодаря
+                точному расчету освещенности</p>
         </div>
         <div class="knowhow__gallery">
             <div class="knowhow__gallery-track">
