--- a/pages/homes.html
+++ b/pages/homes.html
@@ -19,9 +19,18 @@
         </div>
         <div class="hero-homes__container">
             <div class="hero-homes__content">
-                <h1 class="hero-homes__title">ДЕЛАЕМ СВЕТОДИЗАЙН
-ДЛЯ ЖИЛЫХ ДОМОВ 
-И КВАРТИР</h1>
+                <h1 class="hero-homes__title">ДЕЛАЕМ
+                    СВЕТОДИЗАЙН
+                    ДЛЯ ЖИЛЫХ ДОМОВ 
+                    И КВАРТИР</h1>
+                <h1 class="hero-homes__title_tablet">ДЕЛАЕМ СВЕТОДИЗАЙН
+                    ДЛЯ ЖИЛЫХ ДОМОВ 
+                    И КВАРТИР</h1>
+                <h1 class="hero-homes__title_mobile">ДЕЛАЕМ
+                    СВЕТОДИЗАЙН
+                    ДЛЯ ЖИЛЫХ ДОМОВ 
+                    И КВАРТИР</h1>
+
                 <button class="button button--primary">
                     <span class="button__text">Хочу консультацию</span>
                 </button>
@@ -117,6 +126,9 @@
 стиль и задачи; всё фиксируем 
 и переводим в цифровые параметры</p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage1.png" alt="Этап 1">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--orange-40">
@@ -131,6 +143,9 @@
                             <p class="stage-card__text_mobile">Собираем чертежи, визуализации,
 фото и делаем замеры; строим
 3D‑модель помещения</p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage2.png" alt="Этап 2">
                         </div>
                     </div>
                     <div class="stage-card__image">
@@ -149,6 +164,9 @@
                             <p class="stage-card__text_mobile">Работаем по трём слоям 
 освещения: общий, рабочий
 и акцентный</p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage3.png" alt="Этап 3">
                         </div>
                     </div>
                     <div class="stage-card__image">
@@ -169,6 +187,9 @@
 режимов (утро, вечер, вечеринка)
 и варианты управления</p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage4.png" alt="Этап 4">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--brown">
@@ -187,6 +208,9 @@
 с планом освещения
 и отчёт из программы Dialux</p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage5.png" alt="Этап 5">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--dark-brown">
@@ -203,6 +227,9 @@
 и регулируем светильники,
 проверяем сценарии,
 сдаём проект заказчику</p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage1.png" alt="Этап 6">
                         </div>
                     </div>
                 </div>
