--- a/pages/retail.html
+++ b/pages/retail.html
@@ -99,6 +99,9 @@
                                 и переводим в цифровые параметры
                             </p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage1.png" alt="Этап 1">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--orange-40">
@@ -118,9 +121,12 @@
                                 3D‑модель помещения
                             </p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage2.png" alt="Этап 2">
+                        </div>
                     </div>
                     <div class="stage-card__image">
-                        <img src="../images/img2.png" alt="Этап работы" class="stage-card__image-img">
+                        <img src="../images/img3.jpg" alt="Этап работы" class="stage-card__image-img">
                     </div>
                     <div class="stage-card stage-card--wide">
                         <div class="stage-card__header stage-card__header--orange-60">
@@ -141,9 +147,12 @@
                                 и акцентный
                             </p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage3.png" alt="Этап 3">
+                        </div>
                     </div>
                     <div class="stage-card__image">
-                        <img src="../images/img3.jpg" alt="Этап работы" class="stage-card__image-img">
+                        <img src="../images/img2.png" alt="Этап работы" class="stage-card__image-img">
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--orange-80">
@@ -164,6 +173,9 @@
                                 режимов (утро, вечер, вечеринка)
                                 и варианты управления
                             </p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage4.png" alt="Этап 4">
                         </div>
                     </div>
                     <div class="stage-card">
@@ -187,6 +199,9 @@
                                 и отчёт из программы Dialux
                             </p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage5.png" alt="Этап 5">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--dark-brown">
@@ -205,6 +220,9 @@
                                 проверяем сценарии,
                                 сдаём проект заказчику
                             </p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage1.png" alt="Этап 6">
                         </div>
                     </div>
                 </div>
