--- a/pages/spaces.html
+++ b/pages/spaces.html
@@ -106,6 +106,9 @@
                                 и переводим в цифровые параметры
                             </p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage1.png" alt="Этап 1">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--orange-40">
@@ -124,6 +127,9 @@
                                 фото и делаем замеры; строим
                                 3D‑модель помещения
                             </p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage2.png" alt="Этап 2">
                         </div>
                     </div>
                     <div class="stage-card__image">
@@ -147,6 +153,9 @@
                                 освещения: общий, рабочий
                                 и акцентный
                             </p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage3.png" alt="Этап 3">
                         </div>
                     </div>
                     <div class="stage-card__image">
@@ -172,6 +181,9 @@
                                 и варианты управления
                             </p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage4.png" alt="Этап 4">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--brown">
@@ -194,6 +206,9 @@
                                 и отчёт из программы Dialux
                             </p>
                         </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage5.png" alt="Этап 5">
+                        </div>
                     </div>
                     <div class="stage-card">
                         <div class="stage-card__header stage-card__header--dark-brown">
@@ -208,6 +223,11 @@
                                 проверяем сценарии,
                                 сдаём проект заказчику
                             </p>
+                        </div>
+                        <div class="stage-card__image-back">
+                            <img src="../images/stage1.png" alt="Этап 6">
+                        </div>
+                    </div>
                             <p class="stage-card__text_mobile">Настраиваем
                                 и регулируем светильники,
                                 проверяем сценарии,
